toolchain/internal/core/analysis/testdata/errors/spreads/spread_in_proc_undefined.vdl
// @expect: E202

rpc Users {
  proc CreateUser {
    input {
      ...UndefinedInput
      name: string
    }

    output {
      success: bool
    }
  }
}
